# disjoint-set

./: LICENSE  README.md  Test.hs  disjoint-set.cabal
Data/: IntDisjointSet.hs
